# market-simulator

./: .gitignore  CHANGELOG.md  CLAUDE.md  DESIGNDOC.md  pyproject.toml
configs/: simple_run.json
configs/actions/: simple_run.csv
src/market_simulator/core/: clock.py  enums.py  exchange_enums.py  messages.py
src/market_simulator/exchange/: data.py  exchange.py  feed_handler.py  order_book.py  transaction_feed.py
src/market_simulator/exchange/client/: dma_client.py  local_dma_client.py
src/market_simulator/runner/: __init__.py  config.py  runner.py
tests/unit/: test_clock.py  test_enums.py  test_exchange_enums.py
tests/unit/core/: test_clock.py  test_exchange_enums.py
tests/unit/exchange/: test_data.py  test_exchange.py  test_feed_handler.py  test_order_book.py  test_transaction_feed.py
tests/unit/exchange/client/: test_local_dma_client.py
tests/unit/runner/: test_config.py  test_runner.py
