[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-simulator"
version = "1.1.1"
description = "A stochastic model of asset markets with individual participant simulation"
requires-python = ">=3.11"
dependencies = [
    "sortedcontainers>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["market_simulator"]
